# focus-guard

./: .gitignore  CLAUDE.md  Focus.Guard.app.tar.gz.sig  Focus.Guard_0.1.0_aarch64.dmg.sig  Focus.Guard_0.1.1_aarch64.dmg.sig  Focus.Guard_0.1.2_aarch64.dmg.sig  Focus.Guard_0.1.3_aarch64.dmg.sig  Focus.Guard_0.1.4_aarch64.dmg.sig  LICENSE  README.md  README_EN.md  index.html  latest.json  package.json
scripts/: focus-guard-notify  setup-hooks.sh
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: activity_monitor.rs  config.rs  i18n.rs  ipc_server.rs  lib.rs  main.rs  notification.rs  process_monitor.rs  state_manager.rs  updater.rs  window_manager.rs
