[package]
name = "focus-guard"
version = "0.1.1"
description = "开发者健康助手"
authors = ["you"]
edition = "2021"

[lib]
name = "focus_guard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.32"
rdev = "0.5"
tauri-plugin-updater = "2"
tauri-plugin-autostart = "2"
